@@ -310,9 +310,15 @@ module ActionView
         end
       end
 
-      # Returns true if the current page uri is generated by the +options+ passed.
+      # True if the current request uri was generated by the given +options+.
       def current_page?(options)
-        CGI.escapeHTML(self.url_for(options)) == @controller.request.request_uri
+        url_string = CGI.escapeHTML(url_for(options))
+        request = @controller.request
+        if url_string =~ /^\w+:\/\//
+          url_string == "#{request.protocol}#{request.host_with_port}#{request.request_uri}"
+        else
+          url_string == request.request_uri
+        end
       end
 
       private
